# backend

./: .gitignore  Dockerfile  README.md  demo.py  docker-compose.yaml  pyproject.toml  requirements.freeze
UniService/: manage.py
UniService/UniService/: asgi.py  settings.py  urls.py  wsgi.py
UniService/accounts/: admin.py  models.py  pipeline.py  serializers.py  urls.py  views.py
UniService/accounts/migrations/: 0001_initial.py  0002_remove_user_contact_user_gender_alter_user_is_active.py  0003_alter_user_gender.py  0004_user_groups_user_is_staff_user_is_superuser_and_more.py  0005_alter_user_type.py  0006_alter_user_address_alter_user_dob_and_more.py  0007_alter_user_address_alter_user_dob_and_more.py
UniService/api/: admin.py  models.py  serializer.py  urls.py  util.py  views.py
UniService/api/migrations/: 0001_initial.py  0002_staff.py
UniService/campus_life/: apps.py
UniService/career_hub/: apps.py
UniService/django_psdb_engine/: base.py  features.py
UniService/enrolment/: apps.py
UniService/members_card/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
UniService/members_card/migrations/: 0001_initial.py  0002_membercard_active_alter_membercard_expiry_date.py  0003_membercard_photo.py  (+7 more)
UniService/mock_data/: addressInfo.py  female_firstname.py  lastname.py  male_firstname.py
UniService/wellbeing/: apps.py
api_gateway/: .env.template  docker-compose.yaml  nginx.conf
ca-cert/: curl-ca-bundle.crt
gunicorn/: nginx.conf
mock_data/: fetch.js  fetch.umd.min.js  lastname.txt  testing.html
scripts/: 40-variables.sh
(+13 files in other folders)
