[tool.poetry]
name = "backend"
version = "0.1.0"
description = "UniService Backend"
authors = ["Ozy-Viking <admin@hankin.io>"]
# packages = [
#     { include = "UniService/accounts" },
#     { include = "UniService/api" },
#     { include = "UniService/frontend" },
#     { include = "UniService/mock_data" },
#     { include = "UniService/django_psdb_engine" },
#     { include = "UniService/UniService" },
# ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
mysqlclient = "^2.2.0"
tqdm = "^4.66.1"
django-filter = "^23.3"
uritemplate = "^4.1.1"
pyyaml = "^6.0.1"
markdown = "^3.5"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
